fix: removed pseudo-elements and replaced with padding to fix unbalanced <code> element spacing

--- a/client/src/components/layouts/layout.css
+++ b/client/src/components/layouts/layout.css
@@ -582,20 +582,13 @@ code {
   border-radius: 3px;
   font-family: 'SFMono-Regular', Consolas, 'Roboto Mono', 'Droid Sans Mono',
     'Liberation Mono', Menlo, Courier, monospace;
-  padding: 0;
+  padding: 0 0.4em;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
 }
 pre code {
   background: none;
   line-height: 1.42;
-}
-code:before,
-code:after,
-tt:before,
-tt:after {
-  letter-spacing: -0.2em;
-  content: ' ';
 }
 pre code:before,
 pre code:after,
